--- a/src/index.css
+++ b/src/index.css
@@ -130,8 +130,9 @@ body {
   padding: 3rem;
 }
 
+
 .large-text {
-  margin: 10vw 0 10vw 8vw;
+  margin: 6vw 0 6vw 5vw;
 }
 
 .small-text {
@@ -140,6 +141,57 @@ body {
   right: 4vw;
   font-weight: 600;
 }
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.active {
+  color: var(--main-yellow)
+}
+
+/* Popup.css */
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup__content {
+  background: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  width: 80%;
+  max-width: 500px;
+  position: relative;
+}
+
+.popup__close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+}
+
+.popup__img {
+  width: 100%;
+  height: auto;
+}
+
+.popup h2 {
+  margin-top: 0;
+}
+
+.popup p {
+  margin-bottom: 0;
+}
+
 
 .lightBg {
   background-color: var(--light-bg);
